chore: fix ts lint  & fix bug Field doesn't render when options has default values

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,14 @@
             "es2015"
         ],
         "jsx": "react-jsx"
+    },
+    "rules": {
+        "no-unused-expressions": [
+            "off",
+            {
+                "allowShortCircuit": true,
+                "allowTernary": true
+            }
+        ]
     }
 }
